# imic_embedded_iot

./: .cproject  .project  CMakeLists.txt  README.md  imic_embedded_iot.ioc  imic_embedded_iot.launch  index.html  partitions.csv  script.js  sdkconfig.old  style.css
AWS_relating_functions/: lambda_function_Data_Query.py  lambda_function_MQTT_OTA.py  lambda_function_MQTT_data.py  lambda_function_provision.py  local_aws_iot_services_setup.py
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h
Core/Inc/Init/: bus.h  gpios.h  i2c.h  interrupts.h  spi.h  timers_init.h  uart.h  user_main_init.h
Core/Inc/Threads/: button.h  http_services.h  rtc.h  uart_control.h
Core/Inc/Tools/: ds3231_tools.h  esp8266_tools.h  led_tools.h  registers_defs.h  registers_tools.h
Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Core/Src/Init/: bus.c  gpios.c  i2c.c  interrupts.c  spi.c  timers_init.c  uart.c  user_main_init.c
Core/Src/Threads/: button.c  http_services.c  rtc.c  uart_control.c
Core/Src/Tools/: ds3231_tools.c  esp8266_tools.c  led_tools.c  registers_tools.c
Website/: index.html  script.js  style.css
lib/gpio/input/: input.c  input.h
main/: CMakeLists.txt  main.c  main_old.c
services/http_services/: CMakeLists.txt  http_services.c  http_services.h
services/mqtt_services/: CMakeLists.txt  mqtt_services.c  mqtt_services.h
services/ota_services/: CMakeLists.txt  ota_services.c  ota_services.h
services/sleep_services/: CMakeLists.txt  sleep_services.c  sleep_services.h
services/wifi_services/: CMakeLists.txt  wifi_services.c  wifi_services.h
(+5 files in other folders)
